package communityuni.com.model;

import java.util.ArrayList;

public class Map {
    public static ArrayList<TrafficLight> lights = new ArrayList<>();
    public static ArrayList<Vehicle> cars = new ArrayList<>();
    public static ArrayList<Road> roads = new ArrayList<>();

    public Map() {

    }
}
